# lucidity-mcp

./: README.md  REVIEW.md  pyproject.toml
lucidity/: config.py  context.py  git_command.py  server.py  validation.py
lucidity/tools/: code_analysis.py  git_utils.py
tests/: test_config.py  test_git_utils.py  test_security.py
